--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,25 @@
+
 <div class="top-bar">
 	<div class="top-bar-left">
 		<ul class="menu">
-			<li class="menu-text"><%= link_to "Store", root_path%></li>
-			<li><a href="#">One</a></li>
+			<li class="menu-text"> <%= link_to "Store", root_path %></li>
+			<li><%= link_to "New Product", new_product_path %></li>
 			<li><a href="#">Two</a></li>
 		</ul>
 	</div>
-
 	<div class="top-bar-right">
 		<ul class="menu">
-			<li><%= link_to "Products", products_path%></li>
-			<li><%= link_to "New product", new_product_path%></li>
+			<li class="menu-text"><%= link_to "All Products", products_path %></li>
+			<li><a href="#">Four</a></li>
 			<li><a href="#">Five</a></li>
 			<li><a href="#">Six</a></li>
 		</ul>
 	</div>
-</div>  
-  <script>
-    $(document).foundation();
-  </script>
+</div>
+
+<nav class="breadcrumbs" role="menubar" aria-label="breadcrumbs" align="center">
+    <li role="menuitem"><a href="#">Home</a></li>
+    <li role="menuitem"><a href="#">Features</a></li>
+    <li role="menuitem" class="unavailable" role="button" aria-disabled="true"><a href="#">Gene Splicing</a></li>
+    <li role="menuitem" class="current"><a href="#">Cloning</a></li>
+</nav>
