--- a/app/views/welcome/_chipest_product.html.erb
+++ b/app/views/welcome/_chipest_product.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div class="row small-up-2 medium-up-3 large-up-6">
- <%= @product.each do |product|%>
+ <% @product.each do |product|%>
      <div class="column">
          <img class="thumbnail" src="http://placehold.it/300x400">
          <h5><%= link_to product.name, product_path(product) %></h5>
