--- a/app/views/welcome/_newest_product.html.erb
+++ b/app/views/welcome/_newest_product.html.erb
@@ -3,7 +3,7 @@
   <hr>
 </div>
 <div class="row small-up-2 large-up-4">
- <%= @product.each do |product|%>
+ <% @product.each do |product|%>
      <div class="column">
          <img class="thumbnail" src="http://placehold.it/300x400">
          <h5><%= link_to product.name, product_path(product) %></h5>
