--- a/app/views/welcome/_other_product.html.erb
+++ b/app/views/welcome/_other_product.html.erb
@@ -6,7 +6,7 @@
 <hr>
 
 <div class="row">
-    <%= @product.each do |product|%>
+    <% @product.each do |product|%>
         <div class="medium-4 columns">
             <div class="media-object">
                 <div class="media-object-section">
